# polymarket-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOLIFY_DEPLOY.md  Cargo.toml  DEPLOY_LINUX.md  DOCKER.md  DOCKER_CHANGES.md  DOCKER_QUICKREF.md  Dockerfile  KNOWLEDGE_COLLECTION.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  VERCEL_SETUP.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  reset-db.ps1  reset-db.sh  run-docker.sh  run-wsl.sh  run.sh  setup-linux.sh  test-smtp.sh  test-wsl.sh
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  trade_result.md
.github/workflows/: ci.yml  knowledge-sync.yml  release.yml
agent/: .env.example  Cargo.toml  Dockerfile
agent/src/: config.rs  db.rs  email.rs  main.rs  strategy.rs  telegram.rs  types.rs
agent/src/analyzer/: claude.rs  gemini.rs  mod.rs
agent/src/knowledge/: collector.rs  consumer.rs  contributor.rs  mod.rs
agent/src/live/: clob.rs  executor.rs  mod.rs
agent/src/paper/: mod.rs  portfolio.rs
agent/src/team/: auditor.rs  bear_analyst.rs  bull_analyst.rs  crypto_desk.rs  data_analyst.rs  executor.rs  general_desk.rs  judge.rs  mod.rs  researcher.rs  risk_manager.rs  scout.rs  sports_desk.rs  strategist.rs  types.rs  weather_desk.rs
articles/: day_01_building_an_autonomous_polymarket_agent.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  KNOWLEDGE_SYSTEM.md  LIVE_TRADING.md  PAPER_TRADING.md  SETUP_GUIDE.md
knowledge/: insights.json  parameters.json
landing-page/: README.md  index.html  package.json
proxy/: .env.example  Cargo.toml  Dockerfile  fly.toml
proxy/src/: aggregator.rs  config.rs  main.rs  supabase.rs
proxy/src/middleware/: mod.rs  rate_limit.rs  signature.rs
proxy/src/routes/: contribute.rs  health.rs  insights.rs  mod.rs  parameters.rs  register.rs
